# trading

./: .env  .gitignore  app_web.py  candle_agg.py  config.py  emailer.py  indicators.py  main.py  ml_model.py  model_training.ipynb  oanda_history.py  oanda_stream.py  paper_broker.py  paper_engine.py  pyproject.toml  railway.json  strategy_rules.py
artifacts/: direction_model_M15_H4.json  direction_model_M30_H2.json
data/: trades.db
templates/: index.html
