[project]
name = "live-app-rules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "dataclasses>=0.8",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "starlette>=0.50.0",
    "uvicorn[standard]>=0.40.0",
    "websockets>=16.0",
    "wsproto>=1.3.2",
]
