[project]
name = "live-app-rules"
version = "0.1.0"
description = "Live FX rules + ML dashboard"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "starlette>=0.37.2",
  "jinja2>=3.1.4",
  "python-dotenv>=1.0.1",

  "pandas>=2.2.2",
  "numpy>=2.0.0",
  "scikit-learn>=1.5.1",
  "joblib>=1.4.2",

  "httpx>=0.27.0",
  "websockets>=12.0",
  "wsproto>=1.2.0",
]
